# ray-experiments

./: .gitignore
knowledge-distillation/: README.md  pyproject.toml
knowledge-distillation/src/: __init__.py  common.py  ddp_kd.py  multi_student_kd.py  pooled_kd.py  single_gpu.py
llm-evaluation-mlflow/: README.md
mcp/: MIGRATION_GUIDE.md  README.md  analyze_ray_logs_enhanced.py  example_usage.py  mcp_server_config_enhanced.json  ray_job_analyzer_standalone.py  ray_job_monitor_enhanced_mcp.py  ray_job_monitor_summary.md  ray_monitor_mcp_readme.md  sample_ray_log.txt  test_enhanced_monitor.py  test_mcp_protocol.py
mcp/mcp_bak/: analyze_ray_logs.py  mcp_server_config.json  ray_job_monitor_mcp.py  test_ray_monitor.py
progress-tracker/: README.md  pyproject.toml
progress-tracker/src/: progress_tracker.py  progress_tracker_metrics.py
