[project]
name = "progress-tracker"
version = "0.1.0"
description = "Ray-based distributed progress tracking"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ray[default,data]==2.53.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.uv]
# Error we encountered `(RuntimeError: There is no current event loop in thread 'MainThread')` occurs because:
#   Ray Data creates actors in separate processes
#   uvloop has stricter requirements for event loop creation
#   When Ray tries to create an event loop in the actor process, uvloop throws an error
# Solution: Do not install uvloop
override-dependencies = [
    "uvloop ; sys_platform == 'never'"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
